--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
+    "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
